# tencent-im-sys

./: Cargo.toml  LICENSE  README.md  build.rs
sdk/include/: TIMExperimentalAPI.h  TIMGroupManager.h  TIMManager.h  TIMMessageManager.h
src/: wrapper.h
